--- a/TomAI.BeerRateParser/TomAI.BeerRateParser.csproj
+++ b/TomAI.BeerRateParser/TomAI.BeerRateParser.csproj
@@ -8,11 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NPOI" Version="2.6.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TomAI.Domain\TomAI.Domain.csproj" />
+    <ProjectReference Include="..\TomAI.RabbitConnector\TomAI.RabbitConnector.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
